# ldls

./: LICENSE  README.md  pyproject.toml
ldls/: __init__.py  cache.py  completer.py  keywords.py  prefixes.ttl  server.py  utils.py
