[project]
name = "ldls"
version = "0.1.0-dev"
authors = [
    {name = "Niklas Lindström", email = "lindstream@gmail.com"},
]
description = "A Linked Data Language Server based on TRLD."
license = "ISC"
license-files = [
    "LICENSE",
]
dependencies = [
    "trld",
    "pygls",
]
requires-python = ">=3.12"

[project.scripts]
ldls = "ldls.server:main"
